<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".CreateBookActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCreateBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textViewCreateBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title" />

    <EditText
        android:id="@+id/editTextCreateBookTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title_hint" />

    <TextView
        android:id="@+id/textViewCreateBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_book" />

    <EditText
        android:id="@+id/editTextCreateBookAuthor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/author" />

    <TextView
        android:id="@+id/textViewCreateBookRackNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rack_number" />

    <EditText
        android:id="@+id/editTextCreateBookRackNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/rack_number_hint"/>

    <TextView
        android:id="@+id/textViewCreateBookShelfNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shelf_number" />

    <EditText
        android:id="@+id/editTextCreateBookShelfNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/shelf_number_hint"/>

    <TextView
        android:id="@+id/textViewCreateBookVendorCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article" />

    <EditText
        android:id="@+id/editTextCreateBookVendorCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/vendor_code"/>

    <Button
        android:id="@+id/buttonCreateBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

</LinearLayout>